/*
 * Copyright (c) 2020. Aberic - All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * http://www.apache.org/licenses/LICENSE-2.0
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option go_package = "github.com/george/protocols/db";
option java_package = "cn.aberic.george.protocols.db";
option java_outer_classname = "MemoryProto";

package db;

import "db/response.proto";

// 请求插入数据
message RequestMemoryInto {
  string key = 1;
  bytes value = 2;
}

// 请求获取数据
message RequestMemoryOut {
  string key = 1;
}

// 返回获取数据
message ResponseMemoryOut {
  Status status = 1;
  string msg_err = 2;
  bytes value = 3;
}

// 请求删除数据
message RequestMemoryRemove {
  string key = 1;
}

// 请求插入数据
message RequestMemoryPInto {
  // 缓存页名称
  string page_name = 1;
  string key = 2;
  bytes value = 3;
}

// 请求获取数据
message RequestMemoryPOut {
  // 缓存页名称
  string page_name = 1;
  string key = 2;
}

// 返回获取数据
message ResponseMemoryPOut {
  Status status = 1;
  string msg_err = 2;
  bytes value = 3;
}

// 请求删除数据
message RequestMemoryPRemove {
  // 缓存页名称
  string page_name = 1;
  string key = 2;
}